<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimerFragment">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="350dp"
        android:layout_height="144dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpreguntas">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtpreguntas"
        android:layout_width="374dp"
        android:layout_height="148dp"
        android:layout_marginTop="32dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="256dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:gravity="center|center_horizontal"
        android:text="@string/fraguno"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnatras"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/btnatras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

    <Button
        android:id="@+id/btnsiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btnsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

</androidx.constraintlayout.widget.ConstraintLayout>